# ffmpegcpp

./: .gitignore  CMakeLists.txt
include/: av.h
src/: Codec.cpp  Codec.h  Format.cpp  Format.h  Frame.cpp  Frame.h  Packet.cpp  Packet.h  Parser.h  SwsContext.h  av.cpp  av.h
test/: Codec_test.cpp
